| Summary: | ASTERISK-28457: [patch] Fix crash in chan_dahdi on 32-bit systems caused by ASTERISK-28317 | ||||
| Reporter: | abelbeck (abelbeck) | Labels: | patch | ||
| Date Opened: | 2019-06-20 10:41:55 | Date Closed: | 2019-07-02 08:23:56 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Channels/chan_dahdi | ||
| Versions: | 13.27.0 16.4.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | AstLinux 1.3.x with 32-bit toolchain | Attachments: | ( 0) asterisk-13-fix-chan_dahdi-add-logical-group.patch ( 1) asterisk-16-fix-chan_dahdi-add-logical-group.patch | ||
| Description: | With the addition of ASTERISK-28317, chan_dahdi crashes on 32-bit systems when calling ast_json_pack()
{noformat} segfault at 1 ip 40421dcd sp 4334a990 error 4 in libjansson.so.4.11.1[4041d000+b000] {noformat} The crash occurs whenever the first DAHDI call occurs. A tested fix is provided as 13/16 patches. Since 'group' is an unsigned long long, it must be cast as 'ast_json_int_t' along with a JSON type 'I' to work on 32-bit systems. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2019-06-20 10:41:56.717-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: abelbeck (abelbeck) 2019-06-20 10:43:19.430-0500 Since 'group' is an unsigned long long, it must be cast as 'ast_json_int_t' along with a JSON type 'I' to work on 32-bit systems. By: Joshua C. Colp (jcolp) 2019-06-20 10:51:15.351-0500 Do you plan on putting this up for review? By: abelbeck (abelbeck) 2019-06-20 10:57:23.241-0500 I did not plan to. Feel free to create the review. By: Friendly Automation (friendly-automation) 2019-07-02 08:23:57.714-0500 Change 11512 merged by Joshua Colp: chan_dahdi.c: crash in chan_dahdi [https://gerrit.asterisk.org/c/asterisk/+/11512|https://gerrit.asterisk.org/c/asterisk/+/11512] By: Friendly Automation (friendly-automation) 2019-07-02 08:27:58.669-0500 Change 11514 merged by Joshua Colp: chan_dahdi.c: crash in chan_dahdi [https://gerrit.asterisk.org/c/asterisk/+/11514|https://gerrit.asterisk.org/c/asterisk/+/11514] By: Friendly Automation (friendly-automation) 2019-07-02 08:29:00.860-0500 Change 11513 merged by Joshua Colp: chan_dahdi.c: crash in chan_dahdi [https://gerrit.asterisk.org/c/asterisk/+/11513|https://gerrit.asterisk.org/c/asterisk/+/11513] | ||||